--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "scanoss-cli-jslib",
   "version": "1.0.0",
-  "description": "Implementation of the SCANOSS API that identifies files against the free OSSKB",
   "main": "index.js",
-  "repository": "https://github.com/scanoss/scanoss-cli-jslib",
-  "author": "SCANOSS",
+  "repository": "git@github.com:scanoss/scanoss-cli-jslib.git",
+  "author": "Agustin <isasmendi.agus@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "cli-progress": "^3.9.0"
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.0"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
+    "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
-    "isbinaryfile": "^4.0.8",
-    "node-blob": "^0.0.2",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^3.0.0",
+    "p-queue": "^7.1.0",
+    "sort-paths": "^1.1.1"
   }
 }
