--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "scanoss-ts",
+  "name": "scanoss.js",
   "version": "1.0.0",
   "description": "The SCANOSS JS package provides a simple, easy to consume library for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/isasmendiagus/scanoss-ts",
+  "repository": "https://github.com/scanoss/scanoss.js",
   "license": "MIT",
   "keywords": [],
   "scripts": {
