--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scanoss.js",
   "version": "1.0.0",
-  "description": "The SCANOSS JS package provides a simple, easy to consume library for interacting with SCANOSS APIs/Engine.",
+  "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
