--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss.js",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -8,6 +8,9 @@
   "repository": "https://github.com/scanoss/scanoss.js",
   "license": "MIT",
   "keywords": [],
+  "bin": {
+    "scanoss-js": "./build/cli/cli.js"
+  },
   "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
