--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "keywords": [],
   "bin": {
-    "scanoss-js": "./build/cli/cli.js"
+    "scanoss-js": "build/main/bin/cli-bin.js"
   },
   "scripts": {
     "build": "run-p build:*",
@@ -47,6 +47,7 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "abort-controller": "^3.0.0",
+    "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
     "node-fetch": "2.6.1",
