--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1",
     "abort-controller": "^3.0.0",
     "cli-progress": "^3.9.1",
     "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
+    "isbinaryfile": "^4.0.8",
     "node-fetch": "2.6.1",
     "p-queue": "6.6.2",
     "sort-paths": "^1.1.1"
