--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scanoss",
+  "name": "scanoss.js",
   "version": "0.2.6",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
