--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -53,6 +53,7 @@
     "isbinaryfile": "^4.0.8",
     "node-fetch": "2.6.1",
     "p-queue": "6.6.2",
+    "packageurl-js": "^0.0.5",
     "sort-paths": "^1.1.1"
   },
   "devDependencies": {
