--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.5.5",
     "abort-controller": "^3.0.0",
     "cli-progress": "^3.9.1",
     "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
+    "google-protobuf": "^3.19.4",
     "isbinaryfile": "^4.0.8",
     "node-fetch": "2.6.1",
     "p-queue": "6.6.2",
