--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "resolveJsonModule": true /* Include modules imported with .json extension. */,
 
-    "allowJs": true,
+    "allowJs": false,
     "checkJs": false,
+    "noImplicitUseStrict": true,
 
     /* Debugging Options */
     "traceResolution": false /* Report module resolution log messages. */,
@@ -21,10 +22,10 @@
     "pretty": true /* Stylize errors and messages using color and context. */,
 
     "lib": ["es2017"],
-    "types": ["node"],
+    "types": ["mocha","node"],
     "typeRoots": ["node_modules/@types", "src/types"]
   },
   "include": ["./src" , "./src/**/*.ts", "./src/scanoss/*" ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "tests/data/*"],
   "compileOnSave": false
 }
