Integration with Report

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "types": ["mocha","node"],
     "typeRoots": ["node_modules/@types", "src/types"]
   },
-  "include": ["./src" , "./src/**/*.ts", "./src/scanoss/*" ],
+  "include": ["./src" , "./src/**/*.html" , "./src/**/*.ts", "./src/scanoss/*" ],
   "exclude": ["node_modules", "tests/data/*"],
   "compileOnSave": false
 }
