--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.5.5",
+    "@types/adm-zip": "^0.5.0",
     "abort-controller": "^3.0.0",
+    "adm-zip": "^0.5.9",
     "cli-progress": "^3.9.1",
     "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
