--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.2",
     "@types/node-gzip": "^1.1.0",
+    "@types/tar": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "chai": "^4.3.6",
