--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.4.3",
+  "version": "0.4.8-beta",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -44,17 +44,22 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.5.5",
+    "@types/adm-zip": "^0.5.0",
     "abort-controller": "^3.0.0",
+    "adm-zip": "^0.5.9",
     "cli-progress": "^3.9.1",
     "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
     "google-protobuf": "^3.19.4",
+    "gunzip-maybe": "^1.4.2",
     "isbinaryfile": "^4.0.8",
     "node-fetch": "2.6.1",
     "p-queue": "6.6.2",
     "packageurl-js": "^0.0.5",
-    "sort-paths": "^1.1.1"
+    "sort-paths": "^1.1.1",
+    "tar": "^6.1.11",
+    "tar-stream": "^2.2.0"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -62,6 +67,8 @@
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.2",
+    "@types/node-gzip": "^1.1.0",
+    "@types/tar": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "chai": "^4.3.6",
