Handles proxies env

--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "form-data": "^4.0.0",
     "google-protobuf": "^3.19.4",
     "gunzip-maybe": "^1.4.2",
+    "https-proxy-agent": "^5.0.1",
     "isbinaryfile": "^4.0.8",
-    "node-fetch": "2.6.1",
+    "node-fetch": "^2.6.1",
     "p-queue": "6.6.2",
     "packageurl-js": "^0.0.5",
     "sort-paths": "^1.1.1",
