--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "sort-paths": "^1.1.1",
     "syswide-cas": "^5.3.0",
     "tar": "^6.1.11",
-    "tar-stream": "^2.2.0"
+    "tar-stream": "^2.2.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
