--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.5.8",
+  "version": "0.6.2",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -60,7 +60,8 @@
     "sort-paths": "^1.1.1",
     "syswide-cas": "^5.3.0",
     "tar": "^6.1.11",
-    "tar-stream": "^2.2.0"
+    "tar-stream": "^2.2.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
