--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": [
-      "**/*.spec.js"
+      "**/*.spec.ts"
     ]
   }
 }
