CLIS 55 Implements file_count
* CLIS-55 Adds FileCount feature

* CLIS-55 Adds test for FileCount

* CLIS-55 Includes code coverage

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "mocha -r ts-node/register 'tests/**/*.ts'",
+    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'",
     "test:lint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
     "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
@@ -114,7 +114,7 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": [
-      "**/*.spec.js"
+      "**/*.spec.ts"
     ]
   }
 }
