--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'"
+    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'",
+    "install-dev": "npm run build && npm run test && npm install -g ."
   },
   "engines": {
     "node": ">=10"
@@ -48,8 +49,10 @@
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.2",
+    "@types/node-fetch": "^2.6.2",
     "@types/node-gzip": "^1.1.0",
     "@types/tar": "^6.1.3",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "chai": "^4.3.6",
