--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "commander": "^8.3.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
+    "get-uri": "^4.0.0",
     "google-protobuf": "^3.19.4",
     "gunzip-maybe": "^1.4.2",
+    "http-proxy-agent": "^5.0.0",
     "https-proxy-agent": "^5.0.1",
     "isbinaryfile": "^4.0.8",
     "node-fetch": "^2.6.1",
     "p-queue": "6.6.2",
+    "pac-resolver": "^5.0.1",
     "packageurl-js": "^0.0.5",
     "sort-paths": "^1.1.1",
     "syswide-cas": "^5.3.0",
