--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "scanoss-js": "build/main/cli/bin/cli-bin.js"
   },
   "scripts": {
-    "build": "run-p build:*",
+    "build": "npm run build-parsers && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'",
-    "install-dev": "npm run build && npm run test && npm install -g ."
+    "install-dev": "npm run build && npm run test && npm install -g .",
+    "build-parsers": "node build.js"
   },
   "engines": {
     "node": ">=10"
@@ -70,6 +71,7 @@
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "pegjs": "^0.10.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.0.2"
