--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts'",
+    "test": "nyc mocha -r ts-node/register 'tests/**/*.ts' 'src/**/*.spec.ts'",
     "install-dev": "npm run build && npm run test && npm install -g ."
   },
   "engines": {
