--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
+    "@fig/complete-commander": "^3.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
@@ -57,7 +58,6 @@
     "@types/node-gzip": "^1.1.0",
     "@types/tar": "^6.1.3",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^6.18.0",
     "chai": "^4.3.6",
     "codecov": "^3.5.0",
