--- a/.github/workflows/version_tag.yml
+++ b/.github/workflows/version_tag.yml
@@ -9,6 +9,8 @@ on:
         type: boolean
         description: "Apply next tag (or Dry Run)"
 
+concurrency: production
+
 jobs:
   version-tagging:
     runs-on: ubuntu-latest
