--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -77,9 +77,9 @@
   "files": [
     "build/main",
     "build/module",
-    "assets/",
-    "!**/*.spec.*",
     "!**/*.json",
+    "assets/**",
+    "!**/*.spec.*",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
