--- a/package.json
+++ b/package.json
@@ -29,17 +29,13 @@
     "commander": "^11.1.0",
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.0",
-    "get-uri": "^4.0.0",
     "google-protobuf": "^3.19.4",
     "gunzip-maybe": "^1.4.2",
-    "http-proxy-agent": "^5.0.0",
-    "https-proxy-agent": "^5.0.1",
-    "ip": "^1.1.8",
     "isbinaryfile": "^4.0.8",
     "node-fetch": "^2.6.1",
     "p-queue": "6.6.2",
-    "pac-resolver": "^4.2.0",
     "packageurl-js": "^0.0.5",
+    "proxy-agent": "^6.4.0",
     "sort-paths": "^1.1.1",
     "syswide-cas": "^5.3.0",
     "tar": "^6.1.11",
@@ -49,7 +45,6 @@
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
-    "@fig/complete-commander": "^3.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
@@ -58,21 +53,15 @@
     "@types/node-gzip": "^1.1.0",
     "@types/tar": "^6.1.3",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/parser": "^6.18.0",
     "chai": "^4.3.6",
     "codecov": "^3.5.0",
     "deep-equal-in-any-order": "^2.0.1",
-    "eslint": "^7.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^3.0.2",
-    "eslint-plugin-import": "^2.22.0",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.0.2"
+    "typescript": "^5.5.4"
   },
   "files": [
     "build/main",
