--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es2017",
+    "target": "es2018",
     "outDir": "build/main",
     //"rootDir": "src",
     "moduleResolution": "node",
@@ -13,7 +13,7 @@
 
     "allowJs": true,
     "checkJs": false,
-    "noImplicitUseStrict": true,
+    //"noImplicitUseStrict": true,
 
     /* Debugging Options */
     "traceResolution": false /* Report module resolution log messages. */,
