--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "test": "nyc mocha -r ts-node/register 'tests/**/*.ts' 'src/**/*.spec.ts'",
-    "install-dev": "npm run build && npm run test && npm install -g ."
+    "install-dev": "npm run build && npm run test && npm install -g .",
+    "prepare": "npm run build"
   },
   "engines": {
     "node": ">=10"
@@ -47,22 +48,26 @@
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.3.1",
+    "@types/chai": "^4.3.20",
     "@types/mocha": "^9.1.1",
+    "@types/mock-fs": "^4.13.4",
     "@types/node": "^17.0.2",
     "@types/node-fetch": "^2.6.2",
     "@types/node-gzip": "^1.1.0",
+    "@types/sinon": "^17.0.3",
     "@types/tar": "^6.1.3",
     "@types/uuid": "^9.0.0",
-    "chai": "^4.3.6",
+    "chai": "^4.5.0",
     "codecov": "^3.5.0",
     "deep-equal-in-any-order": "^2.0.1",
-    "mocha": "^10.2.0",
+    "mocha": "^10.7.3",
+    "mock-fs": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.5.4"
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "files": [
     "build/main",
