--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.28.1",
+  "version": "0.29.0-beta.1",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -37,6 +37,7 @@
     "packageurl-js": "^1.2.1",
     "proxy-agent": "^6.4.0",
     "sort-paths": "^1.1.1",
+    "stream-json": "^1.9.1",
     "syswide-cas": "^5.3.0",
     "tar": "^6.1.11",
     "tar-stream": "^2.2.0",
@@ -51,6 +52,7 @@
     "@types/node": "^17.0.2",
     "@types/node-fetch": "^2.6.2",
     "@types/node-gzip": "^1.1.0",
+    "@types/stream-json": "^1.7.8",
     "@types/tar": "^6.1.3",
     "@types/uuid": "^9.0.0",
     "chai": "^4.3.6",
