--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "google-protobuf": "^3.19.4",
     "gunzip-maybe": "^1.4.2",
     "isbinaryfile": "^4.0.8",
+    "libarchive.js": "^2.0.2",
     "node-fetch": "^2.6.1",
     "p-queue": "6.6.2",
     "packageurl-js": "^1.2.1",
@@ -39,7 +40,7 @@
     "sort-paths": "^1.1.1",
     "stream-json": "^1.9.1",
     "syswide-cas": "^5.3.0",
-    "tar": "^6.2.1",
+    "tar": "7.5.7",
     "tar-stream": "^2.2.0",
     "uuid": "^9.0.0",
     "xml-js": "^1.6.11"
@@ -48,8 +49,9 @@
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.3.1",
+    "@types/libarchive.js": "^1.3.4",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.2",
+    "@types/node": "^25.2.0",
     "@types/node-fetch": "^2.6.2",
     "@types/node-gzip": "^1.1.0",
     "@types/stream-json": "^1.7.8",
@@ -63,7 +65,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3"
   },
   "files": [
     "build/main",
