--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scanoss",
-  "version": "0.32.0",
+  "version": "0.33.0-beta.1",
   "description": "The SCANOSS JS package provides a simple, easy to consume module for interacting with SCANOSS APIs/Engine.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -30,7 +30,7 @@
     "eventemitter3": "^4.0.7",
     "form-data": "^4.0.5",
     "google-protobuf": "^3.19.4",
-    "gunzip-maybe": "^1.4.2",
+"gunzip-maybe": "^1.4.2",
     "isbinaryfile": "^4.0.8",
     "libarchive.js": "^2.0.2",
     "node-fetch": "^2.6.1",
@@ -49,7 +49,7 @@
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
+"@types/mocha": "^9.1.1",
     "@types/node": "^25.2.0",
     "@types/node-fetch": "^2.6.2",
     "@types/node-gzip": "^1.1.0",
